# dexa-smartcontracts

./: LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml
abi/: abi.json
contracts/: DEXA.sol
contracts/examples/: HotelRoom.sol  MyContract.sol
docker/: Dockerfile
scripts/: compile.py  compile_and_deploy.py  deploy.py
